--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "http-server -c-1 -p 9092",
+    "start": "http-server ./ -c-1 -p 9092 -o",
     "serve": "firebase serve --port 8082"
   },
   "keywords": [
